Unnamed XUL radio menuitems should not be grouped b=219832 r/sr=roc